@@ -23,11 +23,12 @@
 #' by default same as \code{bookmarkVar}
 #' @param subjectSortDecreasing Logical, if TRUE (FALSE by default)
 #' subjects are sorted based on decreasing order of \code{subjectSortVar}.
-#' @param subjectSubsetData data.frame with data used to select subset of subjects of interest.
-#' It should contain the \code{subjectVar} variable.
-#' @param subjectSubsetVar string with variable of \code{subjectSubsetData} used for subsetting.
+#' @param subjectSubsetData Data.frame used to select subset of subjects of interest.
+#' @param subjectSubsetVar String with variable of \code{subjectSubsetData} 
+#' that should be considered to filter subjects.
+#' If not specified, all subjects available in \code{subjectSubsetData} are considered.
 #' @param subjectSubsetValue Character vector with value(s) of \code{subjectSubsetVar}
-#' of interest to select subjects on.
+#' of interest to filter subjects on.
 #' @param subjectSubset subjectSubset (optional) Character vector with subjects of interest 
 #' (available in \code{subjectVar}), NULL by default.
 #' @param subset Character vector with subjects of interest 
@@ -125,17 +126,17 @@ createSubjectProfileReport <- function(
 	## export per batch
 	if(!is.null(exportBatchSize)){
 		if(!reportPerSubject){
-			warning(
+			warning(paste(
 				"Creation of patient profiles per batch not possible",
 				"for one single report across subjects.",
 				"You might want to set 'reportPerSubject' to TRUE."
-			)
+			))
 		}else	if(!(length(timeAlignPerSubject) == 1 && timeAlignPerSubject == "all")){
-			warning(
+			warning(paste(
 				"Creation of patient profiles per batch not possible",
 				"if plots should be aligned across subjects.",
 				"You might want to set 'timeAlignPerSubject' to 'all'."
-			)
+			))
 		}else{
 			
 			# all subjects
