@@ -3,6 +3,7 @@
     o prepareSubjectProfile: fix in case trans and all missing values for interval plot
     o subjectProfileLinePlot: fix for orientation of paramNameVar labels in ggplot2 >= 3.0.0
     o fix bug when Rmd created after createSubjectProfileReport
+    o getGLPGShapePalettePatientProfile: fix mix Unicode and ggplot2 palettes (asText = TRUE)
 1.1.0
     o formatParamVar -> formatVarForPlotLabel/formatLongLabel: moved to glpgUtilityFct
 1.0.0
